--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,8 @@
 <html>
-  <h1>Hello World!</h1>
+  <h1>Hello there!</h1>
+  <h2>What's your name?<h2>
+  <h2>When's your birthday?<h2>
+  <h3>Day:</h3>
+  <h3>Month:</h4>
 </html>
 
