--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,16 @@
 <html>
+  <head>
+    <style type="text/css">
+      h1 {
+        font-family: Arial;
+        text-align: center;
+      }
+      form {
+        font-family: Arial;
+        text-align: center;
+      }
+    </style>
+  </head>
   <h1>Hello there!</h1>
   <form name="birthday_form">
     <label>What's your name?</label>
